--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Loan Calculator</title>
 </head>
-<body>
+<body ng-app="loanCalculator">
     
 </body>
 </html>
