--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Loan Calculator</title>
+    <script type="text/javascript" stc="build/bower.js"></script>
+    <script type="text/javascript" stc="build/app.js"></script>
 </head>
 <body ng-app="loanCalculator">
-    
+    {{1 + 1}}
 </body>
 </html>
