--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Loan Calculator</title>
-    <script type="text/javascript" src="/build/bower.js"></script>
-    <script type="text/javascript" src="/src/app.js"></script>
+    <script type="text/javascript" src="build/bower.js"></script>
+    <script type="text/javascript" src="src/app.js"></script>
 </head>
 <body ng-app="loanCalculator">
     {{1 + 1}}
